fix vertical alignment

--- a/sass/px-vis-timeseries-sketch.scss
+++ b/sass/px-vis-timeseries-sketch.scss
@@ -35,6 +35,10 @@ Predix branding rules go in px-vis-timeseries-predix.scss, not in this file.
     height: 100%;
 }
 
+.flex__item--no-grow {
+    flex: 0 1 auto;
+}
+
 // Trumps
 @import "inuit-clearfix/_trumps.clearfix.scss";
 $inuit-enable-margins : true;
